objects/Transaction_Item__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Reason_Code__c</fullName>
        <label>Discount Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Reason_Comment__c</fullName>
        <label>Discount Reason Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <label>Item ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Quantity__c</fullName>
        <label>Item Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Sequence_Number__c</fullName>
        <label>Item Sequence Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Transaction Items</relationshipLabel>
        <relationshipName>Transaction_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Name__c</fullName>
        <label>Purchase Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <label>Retail Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Associate_ID__c</fullName>
        <label>Sales Associate ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Associate_Name__c</fullName>
        <label>Sales Associate Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <label>Tax Exempt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Transaction Items</relationshipLabel>
        <relationshipName>Transaction_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction Item</label>
    <nameField>
        <displayFormat>TI-{000000}</displayFormat>
        <label>Transaction Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>